--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "type": "module",
   "name": "knowledge-drop-bot",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "main": "src/bot.js",
   "scripts": {
     "start": "node src/bot.js",
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "dotenv": "^17.2.3",
-    "node-telegram-bot-api": "^0.66.0",
-    "mongoose": "^8.0.0"
+    "mongoose": "^8.0.0",
+    "node-cron": "^3.0.3",
+    "node-telegram-bot-api": "^0.66.0"
   }
 }
